--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nuxt/devtools": "^0.5.5",
     "@nuxtjs/google-fonts": "^3.0.1",
     "@nuxtjs/tailwindcss": "^6.7.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@types/cookie": "^0.5.1",
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.5.2",
@@ -20,9 +22,18 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@pinia/nuxt": "^0.4.11",
     "@quasar/extras": "^1.16.4",
-    "pinia": "^2.1.3",
+    "cookie": "^0.5.0",
+    "cookie-universal-nuxt": "^2.2.2",
+    "mdi-vue": "^3.0.13",
+    "nuxt-auth": "^2.0.10",
+    "pinia": "^2.1.4",
     "quasar": "^2.12.0"
   },
   "overrides": {
