--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/devtools": "^0.5.5",
     "@nuxt/types": "^2.17.0",
+    "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/google-fonts": "^3.0.1",
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
@@ -22,10 +23,12 @@
     "nuxt": "^3.5.2",
     "nuxt-quasar-ui": "^1.7.4",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-dark-mode": "^1.1.7"
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-rust": "^6.0.1",
     "@codemirror/state": "6.x",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
