--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@nuxt/types": "^2.17.0",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/google-fonts": "^3.0.1",
-    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@nuxtjs/tailwindcss": "^6.9.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@types/codemirror": "^5.60.8",
     "@types/cookie": "^0.5.1",
@@ -23,8 +23,7 @@
     "nuxt": "^3.5.2",
     "nuxt-quasar-ui": "^1.7.4",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "tailwindcss-dark-mode": "^1.1.7"
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
@@ -45,12 +44,12 @@
     "cookie-universal-nuxt": "^2.2.2",
     "markdown-it": "^13.0.1",
     "markdown-it-highlightjs": "^4.0.1",
-    "markdown-it-vue": "^1.1.7",
+    "markdown-it-vue": "^1.0.9",
     "mdi-vue": "^3.0.13",
     "nuxi": "^3.6.2",
-    "nuxt-auth": "^2.0.10",
     "pinia": "^2.1.4",
     "quasar": "^2.12.0",
+    "tailwindcss-dark-mode": "^1.1.7",
     "vue-codemirror": "^6.1.1"
   },
   "overrides": {
